# gservers_http

./: CMakeLists.txt  LICENSE  README.md  gservers_http.cpp  gservers_http.sln  gservers_http.vcxproj  gservers_http.vcxproj.filters
gbase/: CMakeLists.txt  gbase.vcxproj  gbase.vcxproj.filters  gsafemem.cpp  gsafemem.h  httpquery.cpp  memhelper.hpp  pch.cpp  pch.h  socketapi.cpp  socketbase.cpp  threads.cpp
gbase/memory/: initseg.cpp  memorys.cpp
include/gbase/: basedef.h  compiletime.h  ginterfaces.h  httpquery.h  logger.h  memorys.h  socketapi.h  socketbase.h  threads.h  typeext.h
include/gbase/hpp/: memorys.hpp
